# codicem

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.config.js
codicem/: __main__.py  dashdots.py  decode_morse.py  experiment.py  handler.py  main.py  morse_gen.py  morse_table.tsv  morsenet.py  send_morse_timings.py  timings_type.py  util.py
codicem/cwos/: input_subsys.py  messages.py
frontend/: index.html
frontend/src/: app.ts  audio.ts  draw_morse.ts  easy_socket.ts  index.html  index.ts  keytimer.ts  lcwo.d.ts  lcwo.js  lcwo.ts  messages.ts  nnmorse.ts  reader.ts  recognizer.ts  testapp.ts  timing.ts  timings_sounder.ts  util.ts
notebooks/: random_forest.ipynb  scratch.ipynb  speed_optimization.ipynb
scripts/: gmm.ipynb  morse_dataset.ipynb  random_dataset.py  random_forest.ipynb  timing_plots.ipynb  train.py
tsapps/: main.ts  read_timings.ts  runner.mjs
