[tool.poetry]
name = "codicem"
version = "0.1.0"
description = "Project Codicem: Morse Code Application Framework"
authors = ["Braddock Gaskill <braddock@braddock.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dataclasses-json = "^0.6.4"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
# tensorflow[and-cuda] = "^2.15.0.post1"
websockets = "12.0"
keras = "^2.15.0"
#nvidia-cuda-runtime-cu12 = "12.2.140"
tensorflow = {version = "^2.15.0.post1", extras = ["and-cuda"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
